attempt to fix spacing

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,8 @@
 body {
     display: flex;
     flex-direction: column;
-    min-width: 375px;
+    /*min-width: 375px;*/
+    min-height: 100vh;
   }
   
   header {
@@ -14,16 +15,18 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    padding: 20px;
   }
   
   footer {
     flex: 0 30px;
+    display:flex;
   }
   
   menu {
     flex: 1;
     display: flex;
-    /*  overwrite Bootstrap so the menu does not wrap */
+      /*overwrite Bootstrap so the menu does not wrap */
     flex-direction: row !important;
     list-style: none;
   }
@@ -52,4 +55,3 @@ body {
       flex: 1 100vh;
     }
   }
-  
